# poetiq-arc-agi-solver

./: .gitignore  CLAUDE.md  FINDINGS.md  README.md  main.py  pyproject.toml
arc_agi/: io.py  llm.py  sandbox.py  solve_coding.py
clarc/: CEGIS.md  HANDOFF.md  README.md  __init__.py  ablate.py  absdomain.py  analyze.py  audit_ce_actionability.py  audit_refutations.py  ce_replay.py  cegis_audit.py  clauses.py  codeparse.py  conditional_probe.py  contracts.py  data.py  devset.py  devset_ids.json  dsl.py  dslobj.py  dslparse.py  dsltypes.py  dual_oracle.py  experiment.py  generator.py  harness.py  instrument.py  learn.py  learn_prim.py  library.py  llm_parse.py  loop.py  objconf.py  objects.py  objsmt.py  objsolve.py  predicate_sandbox.py  prim_library.py  probe_bounded.py  probe_dsl.py  (+8 more)
clarc/cli/: __init__.py  ablate.py  devset.py  experiment.py  run.py
clarc/common/: __init__.py  codeparse.py  data.py  geometry.py  instrument.py  paths.py  types.py
clarc/contracts/: __init__.py  learn.py  library.py  sandbox.py  spec.py  store.py
clarc/dsl/: __init__.py  absdomain.py  clauses.py  core.py  induce.py  obj.py  parse.py  prim_library.py  smt.py  types.py
clarc/dual/: RD_NEXT.md  base.py  object_dual.py  sigma_dual.py
clarc/objects/: __init__.py  base.py  conf.py  smt.py  solve.py
clarc/objects/dual/: __init__.py  object_dual.py  sigma_dual.py
clarc/probes/: __init__.py  audit_refutations.py  ce_replay.py  cegis_audit.py  dual_oracle.py  probe_dsl.py  synth_coverage.py  vselect_eval.py
clarc/solve/: __init__.py  analyze.py  generator.py  harness.py  loop.py  solver.py
clarc/tests/: test_cdcl.py  test_clauses.py  test_dsl.py  test_generator.py  test_learn.py  test_learn_prim.py  test_loop_dsl_stub.py  test_loop_induce_stub.py  test_loop_objrule_stub.py  test_loop_stub.py  test_objconf.py  test_objsmt.py  test_prim_integration.py  test_smt.py  test_solver.py  test_spec.py  test_synth.py
docs/notebook/: CEGIS.md  HANDOFF.md  RD_NEXT.md
knowledge/: Contract Learning Algorithm Sketch 14354458ea6880439533faeaf022afc0.md
