[project]
name = "poetiq-arc-agi-solver"
version = "0.1.0"
description = "Contract-Learning ARC-AGI solver (clarc) layered on the poetiq harness"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "litellm>=1.78.2",
    "asynciolimiter>=1.2.0",
    "python-dotenv>=1.1.1",
    "icontract>=2.7.1",
    "z3-solver>=4.13",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arc_agi", "clarc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["clarc/tests"]
markers = [
    "cli: tests that invoke the real `claude` CLI (slow, costs money; deselected by default)",
]
addopts = "-m 'not cli'"
