[project]
name = "poetiq-arc-agi-solver"
version = "0.1.0"
description = "Contract-Learning ARC-AGI solver (clarc) layered on the poetiq harness"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "litellm>=1.78.2",
    "asynciolimiter>=1.2.0",
    "python-dotenv>=1.1.1",
    "icontract>=2.7.1",
    "z3-solver>=4.13",
]

[project.scripts]
# Runnable drivers (clarc/cli/) and $0 diagnostics (clarc/probes/). Each module
# already exposes `def main()`. `python -m clarc.cli.<x>` works equivalently.
clarc-run = "clarc.cli.run:main"
clarc-experiment = "clarc.cli.experiment:main"
clarc-ablate = "clarc.cli.ablate:main"
clarc-devset = "clarc.cli.devset:main"
clarc-probe-dsl = "clarc.probes.probe_dsl:main"
clarc-synth-coverage = "clarc.probes.synth_coverage:main"
clarc-audit-refutations = "clarc.probes.audit_refutations:main"
clarc-cegis-audit = "clarc.probes.cegis_audit:main"
clarc-ce-replay = "clarc.probes.ce_replay:main"
clarc-dual-oracle = "clarc.probes.dual_oracle:main"
clarc-vselect-eval = "clarc.probes.vselect_eval:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arc_agi", "clarc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["clarc/tests"]
markers = [
    "cli: tests that invoke the real `claude` CLI (slow, costs money; deselected by default)",
]
addopts = "-m 'not cli'"
